# FunkyWunkyShapes

./: .gitignore  CMakeLists.txt  How_To_Use_This_Code.md  Tests.cpp  catch.hpp  main.cpp  presentation_requirements.txt  readme.md
Shapes/: Circle.cpp  Circle.h  Composite.cpp  Composite.hpp  Horizontal.cpp  Horizontal.h  Layered.cpp  Layered.hpp  Polygon.cpp  Polygon.hpp  Rectangle.cpp  Rectangle.h  Retangle.h  Rotated.cpp  Rotated.h  Scaled.cpp  Scaled.h  Shape.cpp  Shape.h  Smiley.cpp  Smiley.h  Spacer.cpp  Spacer.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h  Vertical.cpp  Vertical.h
